# TryLapse

./: .dockerignore  .env.example  .gitignore  BACKLOG.md  CHANGES.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRODUCT.md  README.md  RECORDING_INTEGRATION.md  TODOS.md  cursor_idea_research_and_tool_discovery.md  docker-compose.yml  docker-entrypoint.sh  package-lock.json  railway.json  rehearse
launch-rehearsal/: README.md  pyproject.toml
launch-rehearsal/artifacts/: jobs.db  jobs.db-shm  jobs.db-wal  jobs.json  jobs.json.migrated  product_model.json  workspace.json
launch-rehearsal/artifacts/analysis/: argyle-20260529-184202.json  argyle-20260530-235539.json  argyle-20260530-235656.json  argyle-20260531-000517.json  argyle-20260608-002317.json  cal-20260529-192836.json  cal-20260529-192901.json  cal-20260529-193724.json  cal-20260529-213154.json  enterprise-20260529-213552.json  enterprise-20260529-215258.json  enterprise-20260529-215418.json  enterprise-20260530-045757.json  enterprise-20260530-152221.json  enterprise-20260530-152749.json  (+36 more)
launch-rehearsal/competitive-intel/: PROGRESS.md  competitive-matrix.md  competitors-report.md  intake.md
launch-rehearsal/examples/: cal-com-phase0.yaml  enterprise-authenticated.yaml  enterprise-saas.yaml
launch-rehearsal/tests/: test_ab_backlog.py  test_admin_store.py  test_adversarial_scoring.py  test_analysis_export.py  test_auth_required_by_default.py  test_auth_store.py  test_behavioral_execution.py  test_benchmark_recalibration.py  test_billing.py  test_browser_engine_selection.py  test_browser_phrases.py  test_case_study.py  test_chat_store.py  test_cli_gate.py  test_command_digest.py  test_compare_narrative.py  test_config_yaml.py  test_crawl_progress.py  test_crawler.py  test_cross_workspace_job_authorization.py  test_dashboard_store.py  test_deep_crawler_auth_wall.py  test_determinism.py  test_dsl.py  test_dsl_phase_a.py  test_e2e_integration.py  test_errors_budgets.py  test_experiment_dsl.py  test_focus_region.py  test_guardrails.py  test_heuristics.py  test_jobs.py  test_journey_agent_video_path.py  test_journey_gen.py  test_llm_provider_selection.py  test_narrative.py  test_narrative_cache.py  test_notifications.py  test_outcome_scheduler.py  test_password_reset.py  (+20 more)
(+480 files in other folders)
