[project]
name = "launch-rehearsal"
version = "0.1.0"
description = "Launch Rehearsal — synthetic E2E rehearsal CLI (Phase 1)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "httpx>=0.27",
  "click>=8.1",
  "playwright>=1.49",
]

[project.scripts]
rehearse = "rehearse.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rehearse"]

[tool.hatch.build.targets.wheel.force-include]
"src/rehearse/dashboard/static" = "rehearse/dashboard/static"

[tool.hatch.build]
packages = ["src/rehearse"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/rehearse"]
omit = ["*/dashboard/static/*"]
