[project]
name = "launch-rehearsal"
version = "0.1.0"
description = "Launch Rehearsal — synthetic E2E rehearsal CLI (Phase 1)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "httpx>=0.27",
  "click>=8.1",
  "playwright>=1.49",
]

[project.scripts]
rehearse = "rehearse.cli:main"
rehearse-mcp = "rehearse.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rehearse"]
# static/ is force-included below so it can pick up the real frontend build
# output (copied in at Docker-build time) as well as the tracked dev
# placeholder — excluded here so the normal package copy doesn't also grab
# the placeholder and collide with force-include adding the same path twice.
exclude = ["src/rehearse/dashboard/static/**"]

[tool.hatch.build.targets.wheel.force-include]
"src/rehearse/dashboard/static" = "rehearse/dashboard/static"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
postgres = [
  "psycopg2-binary>=2.9",
]
billing = [
  "stripe>=10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/rehearse"]
omit = ["*/dashboard/static/*"]
